# promptAnonymizer

./: .gitignore  README.md
datasets/: count_piis.py  generate_combined_csv.py  writing_tools_prompts.csv
promptAnonymizer/: README.md  pyproject.toml
promptAnonymizer-browser-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  styles.css
promptAnonymizer-evaluation/: README.md  evaluate_masking_vs_fpe_bertscore.py  evaluate_masking_vs_fpe_bleu.py  evaluate_masking_vs_fpe_rouge.py  evaluate_memory_usage.py  evaluate_pii_detection.py  evaluate_purpose_impact.py  evaluate_utility_preservation.py
promptAnonymizer-server/: README.md  main.py
promptAnonymizer/promptAnonymizer/: __init__.py  __main__.py
promptAnonymizer/promptAnonymizer/analyzer/context/agent/: main.py
promptAnonymizer/promptAnonymizer/analyzer/pii/agent/: main.py  regex_helper.py
promptAnonymizer/promptAnonymizer/analyzer/pii/presidio/: constants.py  main.py
promptAnonymizer/promptAnonymizer/analyzer/purpose/agent/: main.py
promptAnonymizer/promptAnonymizer/analyzer/purpose/detector/: main.py
promptAnonymizer/promptAnonymizer/anonymizer/context/: main.py
promptAnonymizer/promptAnonymizer/anonymizer/fpe/: engine.py  operator.py
promptAnonymizer/promptAnonymizer/anonymizer/presidio/: main.py
promptAnonymizer/promptAnonymizer/pipeline/: config.py  langgraph_app.py
promptAnonymizer/promptAnonymizer/reidentifier/agent/: main.py
